// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyApplications component should be rendered correctly if apps uninstalled 1`] = `
<Content
  className="sto-myapps"
>
  <div
    className="sto-list-container"
  >
    <QuerystringSections
      apps={
        Array [
          Object {
            "categories": Array [
              "cozy",
            ],
            "developer": Object {
              "name": "Cozy",
            },
            "editor": "Cozy",
            "icon": "<svg></svg>",
            "installed": true,
            "isInRegistry": true,
            "label": 1,
            "name": "Collect",
            "name_prefix": "Cozy",
            "permissions": Object {
              "mock": Object {
                "type": "io.mock.doctype",
              },
              "mock2": Object {
                "type": "io.mock.doctype2",
              },
            },
            "related": "http://collect.cozy.mock/",
            "slug": "collect",
            "tags": Array [
              "konnector",
              "collect",
              "bills",
              "providers",
              "files",
            ],
            "type": "webapp",
            "uninstallable": false,
            "version": "3.0.0",
            "versions": Object {
              "beta": Array [
                "3.0.0",
              ],
              "dev": Array [
                "3.0.0",
              ],
              "stable": Array [
                "3.0.0",
              ],
            },
          },
          Object {
            "categories": Array [
              "cozy",
            ],
            "developer": Object {
              "name": "Cozy",
            },
            "editor": "Cozy",
            "icon": "<svg></svg>",
            "installed": true,
            "name": "Drive",
            "name_prefix": "Cozy",
            "permissions": Object {
              "mock2": Object {
                "type": "io.mock.doctype2",
              },
            },
            "related": "http://drive.cozy.mock/",
            "slug": "drive",
            "tags": Array [
              "search",
              "files",
              "folders",
            ],
            "type": "webapp",
            "uninstallable": false,
            "version": "3.0.0-beta89bnhj3993",
          },
          Object {
            "categories": Array [
              "transport",
            ],
            "developer": Object {
              "name": "Cozy",
            },
            "icon": "<svg></svg>",
            "installed": true,
            "isInRegistry": true,
            "name": "Trinlane",
            "permissions": Object {
              "mock": Object {
                "type": "io.mock.doctype",
              },
            },
            "slug": "konnector-trinlane",
            "tags": Array [
              "transport",
              "files",
              "bills",
            ],
            "type": "konnector",
            "uninstallable": true,
            "version": "0.1.0",
            "versions": Object {
              "beta": Array [
                "0.1.0",
              ],
              "dev": Array [
                "0.1.0",
              ],
              "stable": Array [
                "0.1.0",
              ],
            },
          },
          Object {
            "availableVersion": "3.0.0",
            "categories": Array [
              "partners",
            ],
            "icon": "<svg></svg>",
            "installed": true,
            "isInRegistry": true,
            "name": "Tasky",
            "slug": "tasky",
            "type": "webapp",
            "uninstallable": true,
            "versions": Object {
              "beta": Array [
                "3.0.0",
                "1.0.0",
              ],
              "dev": Array [
                "3.0.0",
                "1.0.0",
              ],
              "stable": Array [
                "3.0.0",
                "1.0.0",
              ],
            },
          },
        ]
      }
      error={null}
      onAppClick={[Function]}
    />
  </div>
  <withI18n(ApplicationRoutingWrapper)
    actionError={null}
    installedApps={
      Array [
        Object {
          "categories": Array [
            "cozy",
          ],
          "developer": Object {
            "name": "Cozy",
          },
          "editor": "Cozy",
          "icon": "<svg></svg>",
          "installed": true,
          "isInRegistry": true,
          "label": 1,
          "name": "Collect",
          "name_prefix": "Cozy",
          "permissions": Object {
            "mock": Object {
              "type": "io.mock.doctype",
            },
            "mock2": Object {
              "type": "io.mock.doctype2",
            },
          },
          "related": "http://collect.cozy.mock/",
          "slug": "collect",
          "tags": Array [
            "konnector",
            "collect",
            "bills",
            "providers",
            "files",
          ],
          "type": "webapp",
          "uninstallable": false,
          "version": "3.0.0",
          "versions": Object {
            "beta": Array [
              "3.0.0",
            ],
            "dev": Array [
              "3.0.0",
            ],
            "stable": Array [
              "3.0.0",
            ],
          },
        },
        Object {
          "categories": Array [
            "cozy",
          ],
          "developer": Object {
            "name": "Cozy",
          },
          "editor": "Cozy",
          "icon": "<svg></svg>",
          "installed": true,
          "name": "Drive",
          "name_prefix": "Cozy",
          "permissions": Object {
            "mock2": Object {
              "type": "io.mock.doctype2",
            },
          },
          "related": "http://drive.cozy.mock/",
          "slug": "drive",
          "tags": Array [
            "search",
            "files",
            "folders",
          ],
          "type": "webapp",
          "uninstallable": false,
          "version": "3.0.0-beta89bnhj3993",
        },
        Object {
          "categories": Array [
            "transport",
          ],
          "developer": Object {
            "name": "Cozy",
          },
          "icon": "<svg></svg>",
          "installed": true,
          "isInRegistry": true,
          "name": "Trinlane",
          "permissions": Object {
            "mock": Object {
              "type": "io.mock.doctype",
            },
          },
          "slug": "konnector-trinlane",
          "tags": Array [
            "transport",
            "files",
            "bills",
          ],
          "type": "konnector",
          "uninstallable": true,
          "version": "0.1.0",
          "versions": Object {
            "beta": Array [
              "0.1.0",
            ],
            "dev": Array [
              "0.1.0",
            ],
            "stable": Array [
              "0.1.0",
            ],
          },
        },
        Object {
          "availableVersion": "3.0.0",
          "categories": Array [
            "partners",
          ],
          "icon": "<svg></svg>",
          "installed": true,
          "isInRegistry": true,
          "name": "Tasky",
          "slug": "tasky",
          "type": "webapp",
          "uninstallable": true,
          "versions": Object {
            "beta": Array [
              "3.0.0",
              "1.0.0",
            ],
            "dev": Array [
              "3.0.0",
              "1.0.0",
            ],
            "stable": Array [
              "3.0.0",
              "1.0.0",
            ],
          },
        },
      ]
    }
    isFetching={false}
    parent="myapps"
  />
</Content>
`;

exports[`MyApplications component should be rendered correctly with apps and URL search params 1`] = `
<Content
  className="sto-myapps"
>
  <div
    className="sto-list-container"
  >
    <QuerystringSections
      apps={
        Array [
          Object {
            "categories": Array [
              "cozy",
            ],
            "developer": Object {
              "name": "Cozy",
            },
            "editor": "Cozy",
            "icon": "<svg></svg>",
            "installed": true,
            "isInRegistry": true,
            "label": 1,
            "name": "Collect",
            "name_prefix": "Cozy",
            "permissions": Object {
              "mock": Object {
                "type": "io.mock.doctype",
              },
              "mock2": Object {
                "type": "io.mock.doctype2",
              },
            },
            "related": "http://collect.cozy.mock/",
            "slug": "collect",
            "tags": Array [
              "konnector",
              "collect",
              "bills",
              "providers",
              "files",
            ],
            "type": "webapp",
            "uninstallable": false,
            "version": "3.0.0",
            "versions": Object {
              "beta": Array [
                "3.0.0",
              ],
              "dev": Array [
                "3.0.0",
              ],
              "stable": Array [
                "3.0.0",
              ],
            },
          },
          Object {
            "categories": Array [
              "cozy",
            ],
            "developer": Object {
              "name": "Cozy",
            },
            "editor": "Cozy",
            "icon": "<svg></svg>",
            "installed": true,
            "name": "Drive",
            "name_prefix": "Cozy",
            "permissions": Object {
              "mock2": Object {
                "type": "io.mock.doctype2",
              },
            },
            "related": "http://drive.cozy.mock/",
            "slug": "drive",
            "tags": Array [
              "search",
              "files",
              "folders",
            ],
            "type": "webapp",
            "uninstallable": false,
            "version": "3.0.0-beta89bnhj3993",
          },
          Object {
            "categories": Array [
              "transport",
            ],
            "developer": Object {
              "name": "Cozy",
            },
            "icon": "<svg></svg>",
            "installed": true,
            "isInRegistry": true,
            "name": "Trinlane",
            "permissions": Object {
              "mock": Object {
                "type": "io.mock.doctype",
              },
            },
            "slug": "konnector-trinlane",
            "tags": Array [
              "transport",
              "files",
              "bills",
            ],
            "type": "konnector",
            "uninstallable": true,
            "version": "0.1.0",
            "versions": Object {
              "beta": Array [
                "0.1.0",
              ],
              "dev": Array [
                "0.1.0",
              ],
              "stable": Array [
                "0.1.0",
              ],
            },
          },
          Object {
            "availableVersion": "3.0.0",
            "categories": Array [
              "partners",
            ],
            "icon": "<svg></svg>",
            "installed": true,
            "isInRegistry": true,
            "name": "Tasky",
            "slug": "tasky",
            "type": "webapp",
            "uninstallable": true,
            "versions": Object {
              "beta": Array [
                "3.0.0",
                "1.0.0",
              ],
              "dev": Array [
                "3.0.0",
                "1.0.0",
              ],
              "stable": Array [
                "3.0.0",
                "1.0.0",
              ],
            },
          },
        ]
      }
      error={null}
      onAppClick={[Function]}
    />
  </div>
  <withI18n(ApplicationRoutingWrapper)
    actionError={null}
    installedApps={
      Array [
        Object {
          "categories": Array [
            "cozy",
          ],
          "developer": Object {
            "name": "Cozy",
          },
          "editor": "Cozy",
          "icon": "<svg></svg>",
          "installed": true,
          "isInRegistry": true,
          "label": 1,
          "name": "Collect",
          "name_prefix": "Cozy",
          "permissions": Object {
            "mock": Object {
              "type": "io.mock.doctype",
            },
            "mock2": Object {
              "type": "io.mock.doctype2",
            },
          },
          "related": "http://collect.cozy.mock/",
          "slug": "collect",
          "tags": Array [
            "konnector",
            "collect",
            "bills",
            "providers",
            "files",
          ],
          "type": "webapp",
          "uninstallable": false,
          "version": "3.0.0",
          "versions": Object {
            "beta": Array [
              "3.0.0",
            ],
            "dev": Array [
              "3.0.0",
            ],
            "stable": Array [
              "3.0.0",
            ],
          },
        },
        Object {
          "categories": Array [
            "cozy",
          ],
          "developer": Object {
            "name": "Cozy",
          },
          "editor": "Cozy",
          "icon": "<svg></svg>",
          "installed": true,
          "name": "Drive",
          "name_prefix": "Cozy",
          "permissions": Object {
            "mock2": Object {
              "type": "io.mock.doctype2",
            },
          },
          "related": "http://drive.cozy.mock/",
          "slug": "drive",
          "tags": Array [
            "search",
            "files",
            "folders",
          ],
          "type": "webapp",
          "uninstallable": false,
          "version": "3.0.0-beta89bnhj3993",
        },
        Object {
          "categories": Array [
            "transport",
          ],
          "developer": Object {
            "name": "Cozy",
          },
          "icon": "<svg></svg>",
          "installed": true,
          "isInRegistry": true,
          "name": "Trinlane",
          "permissions": Object {
            "mock": Object {
              "type": "io.mock.doctype",
            },
          },
          "slug": "konnector-trinlane",
          "tags": Array [
            "transport",
            "files",
            "bills",
          ],
          "type": "konnector",
          "uninstallable": true,
          "version": "0.1.0",
          "versions": Object {
            "beta": Array [
              "0.1.0",
            ],
            "dev": Array [
              "0.1.0",
            ],
            "stable": Array [
              "0.1.0",
            ],
          },
        },
        Object {
          "availableVersion": "3.0.0",
          "categories": Array [
            "partners",
          ],
          "icon": "<svg></svg>",
          "installed": true,
          "isInRegistry": true,
          "name": "Tasky",
          "slug": "tasky",
          "type": "webapp",
          "uninstallable": true,
          "versions": Object {
            "beta": Array [
              "3.0.0",
              "1.0.0",
            ],
            "dev": Array [
              "3.0.0",
              "1.0.0",
            ],
            "stable": Array [
              "3.0.0",
              "1.0.0",
            ],
          },
        },
      ]
    }
    isFetching={false}
    parent="myapps"
  />
</Content>
`;

exports[`MyApplications component should display error from props correctly 1`] = `
<Content
  className="sto-myapps"
>
  <div
    className="sto-list-container"
  >
    <QuerystringSections
      apps={Array []}
      error={[Error: This is a test error]}
      onAppClick={[Function]}
    />
  </div>
  <withI18n(ApplicationRoutingWrapper)
    actionError={null}
    installedApps={Array []}
    isFetching={false}
    parent="myapps"
  />
</Content>
`;

exports[`MyApplications component should render correctly a spinner if apps is fetching 1`] = `
<Content
  className="sto-myapps"
>
  <div
    className="sto-list-container"
  />
  <withI18n(ApplicationRoutingWrapper)
    actionError={null}
    installedApps={Array []}
    isFetching={true}
    parent="myapps"
  />
</Content>
`;

exports[`MyApplications component should use BarCenter from cozy-bar in mobile view only 1`] = `
<Content
  className="sto-myapps"
>
  <div
    className="sto-list-container"
  >
    <BarCenter>
      <h2
        className="sto-view-title"
      >
        Installed
      </h2>
    </BarCenter>
    <QuerystringSections
      apps={
        Array [
          Object {
            "categories": Array [
              "cozy",
            ],
            "developer": Object {
              "name": "Cozy",
            },
            "editor": "Cozy",
            "icon": "<svg></svg>",
            "installed": true,
            "isInRegistry": true,
            "label": 1,
            "name": "Collect",
            "name_prefix": "Cozy",
            "permissions": Object {
              "mock": Object {
                "type": "io.mock.doctype",
              },
              "mock2": Object {
                "type": "io.mock.doctype2",
              },
            },
            "related": "http://collect.cozy.mock/",
            "slug": "collect",
            "tags": Array [
              "konnector",
              "collect",
              "bills",
              "providers",
              "files",
            ],
            "type": "webapp",
            "uninstallable": false,
            "version": "3.0.0",
            "versions": Object {
              "beta": Array [
                "3.0.0",
              ],
              "dev": Array [
                "3.0.0",
              ],
              "stable": Array [
                "3.0.0",
              ],
            },
          },
          Object {
            "categories": Array [
              "cozy",
            ],
            "developer": Object {
              "name": "Cozy",
            },
            "editor": "Cozy",
            "icon": "<svg></svg>",
            "installed": true,
            "name": "Drive",
            "name_prefix": "Cozy",
            "permissions": Object {
              "mock2": Object {
                "type": "io.mock.doctype2",
              },
            },
            "related": "http://drive.cozy.mock/",
            "slug": "drive",
            "tags": Array [
              "search",
              "files",
              "folders",
            ],
            "type": "webapp",
            "uninstallable": false,
            "version": "3.0.0-beta89bnhj3993",
          },
          Object {
            "categories": Array [
              "transport",
            ],
            "developer": Object {
              "name": "Cozy",
            },
            "icon": "<svg></svg>",
            "installed": true,
            "isInRegistry": true,
            "name": "Trinlane",
            "permissions": Object {
              "mock": Object {
                "type": "io.mock.doctype",
              },
            },
            "slug": "konnector-trinlane",
            "tags": Array [
              "transport",
              "files",
              "bills",
            ],
            "type": "konnector",
            "uninstallable": true,
            "version": "0.1.0",
            "versions": Object {
              "beta": Array [
                "0.1.0",
              ],
              "dev": Array [
                "0.1.0",
              ],
              "stable": Array [
                "0.1.0",
              ],
            },
          },
          Object {
            "availableVersion": "3.0.0",
            "categories": Array [
              "partners",
            ],
            "icon": "<svg></svg>",
            "installed": true,
            "isInRegistry": true,
            "name": "Tasky",
            "slug": "tasky",
            "type": "webapp",
            "uninstallable": true,
            "versions": Object {
              "beta": Array [
                "3.0.0",
                "1.0.0",
              ],
              "dev": Array [
                "3.0.0",
                "1.0.0",
              ],
              "stable": Array [
                "3.0.0",
                "1.0.0",
              ],
            },
          },
        ]
      }
      error={null}
      onAppClick={[Function]}
    />
  </div>
  <withI18n(ApplicationRoutingWrapper)
    actionError={null}
    installedApps={
      Array [
        Object {
          "categories": Array [
            "cozy",
          ],
          "developer": Object {
            "name": "Cozy",
          },
          "editor": "Cozy",
          "icon": "<svg></svg>",
          "installed": true,
          "isInRegistry": true,
          "label": 1,
          "name": "Collect",
          "name_prefix": "Cozy",
          "permissions": Object {
            "mock": Object {
              "type": "io.mock.doctype",
            },
            "mock2": Object {
              "type": "io.mock.doctype2",
            },
          },
          "related": "http://collect.cozy.mock/",
          "slug": "collect",
          "tags": Array [
            "konnector",
            "collect",
            "bills",
            "providers",
            "files",
          ],
          "type": "webapp",
          "uninstallable": false,
          "version": "3.0.0",
          "versions": Object {
            "beta": Array [
              "3.0.0",
            ],
            "dev": Array [
              "3.0.0",
            ],
            "stable": Array [
              "3.0.0",
            ],
          },
        },
        Object {
          "categories": Array [
            "cozy",
          ],
          "developer": Object {
            "name": "Cozy",
          },
          "editor": "Cozy",
          "icon": "<svg></svg>",
          "installed": true,
          "name": "Drive",
          "name_prefix": "Cozy",
          "permissions": Object {
            "mock2": Object {
              "type": "io.mock.doctype2",
            },
          },
          "related": "http://drive.cozy.mock/",
          "slug": "drive",
          "tags": Array [
            "search",
            "files",
            "folders",
          ],
          "type": "webapp",
          "uninstallable": false,
          "version": "3.0.0-beta89bnhj3993",
        },
        Object {
          "categories": Array [
            "transport",
          ],
          "developer": Object {
            "name": "Cozy",
          },
          "icon": "<svg></svg>",
          "installed": true,
          "isInRegistry": true,
          "name": "Trinlane",
          "permissions": Object {
            "mock": Object {
              "type": "io.mock.doctype",
            },
          },
          "slug": "konnector-trinlane",
          "tags": Array [
            "transport",
            "files",
            "bills",
          ],
          "type": "konnector",
          "uninstallable": true,
          "version": "0.1.0",
          "versions": Object {
            "beta": Array [
              "0.1.0",
            ],
            "dev": Array [
              "0.1.0",
            ],
            "stable": Array [
              "0.1.0",
            ],
          },
        },
        Object {
          "availableVersion": "3.0.0",
          "categories": Array [
            "partners",
          ],
          "icon": "<svg></svg>",
          "installed": true,
          "isInRegistry": true,
          "name": "Tasky",
          "slug": "tasky",
          "type": "webapp",
          "uninstallable": true,
          "versions": Object {
            "beta": Array [
              "3.0.0",
              "1.0.0",
            ],
            "dev": Array [
              "3.0.0",
              "1.0.0",
            ],
            "stable": Array [
              "3.0.0",
              "1.0.0",
            ],
          },
        },
      ]
    }
    isFetching={false}
    parent="myapps"
  />
</Content>
`;
